feat(basename): Enhance Basename integration and reputation system
- Add comprehensive Basename management in ReputationSystem smart contract
- Implement new userBasenames mapping and related setter/getter methods
- Update frontend dependencies to latest OnchainKit and wallet libraries
- Add new AddressDisplay component for improved address/basename rendering
- Refactor basename-related utilities and components
- Update README with detailed Basename integration documentation
- Add new test for reputation-gated access functionality
- Update .gitignore to include additional documentation files
- Improve frontend font and typography configurations
Resolves ongoing improvements to user identity and reputation tracking across the EthosBase platform

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
         content="Build your on-chain reputation and unlock better DeFi rates, lower collateral, and exclusive access to premium lending pools on Base.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&family=Inter:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
 </head>
 
